--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <h1 id="p4">Yours Free Today! Just pay S&H
                    </h1>
                   <br>
-                   <button class="btn btn-danger popping-btn">
+                   <button class="btn btn-danger popping-btn" id="popper">
                      <h2 id="shadow">Claim My Free Alignment <br>Sticks</h2>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-circle-arrow-right"></i>
                    </button>
                    
@@ -231,7 +231,7 @@
                     <h1 id="p4">Yours Free Today! Just pay S&H
                    </h1>
                   <br>
-                   <button class="btn btn-danger popping-btn">
+                   <button class="btn btn-danger popping-btn" id="popper">
                      <h2 id="shadow">Claim My Free Alignment Sticks</h2>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-circle-arrow-right"></i>
                    </button>
                    
